more link fixes

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
         {"largeWidth": "1024", "largeHeight": "580", "exportFilename": "WhatIsCode", "url": "https://www.bloomberg.com/graphics/2015-paul-ford-what-is-code/"},
         {"largeWidth": "1200", "largeHeight": "800", "exportFilename": "woelfel", "url": "https://www.instagram.com/brandonwoelfel/?hl=en"},
                             ]        </script>
-<script src="/static/js/about.js"></script>
+<script src="./static/js/about.js"></script>
 
 
 
