--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css">
 
     <!-- Main CSS File -->
-    <link rel="stylesheet" type="text/css" href="static/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="./static/css/main.css" />
 
     <!--Font Awesome-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -26,7 +26,7 @@
 
 <nav class="navbar" role="navigation" aria-label="main navigation">
 <div class="navbar-brand">
-    <a class="navbar-item" href="/">
+    <a class="navbar-item" href="./">
         <h1 class="title is-1">Kartikeya Kandula</h1>
 <!--         <img src="./static/img/logo.png" alt=""></a> -->
     </a>
@@ -40,10 +40,10 @@
 <div id="navbarBasicExample" class="navbar-menu">
 
     <div class="navbar-end">
-        <a class="navbar-item right" href="/">Home</a>
-        <a class="navbar-item right" href="/about">About</a>
-        <a class="navbar-item right" href="/photos">Photos</a>
-        <a class="navbar-item right" href="/resume.pdf">Resume</a>
+        <a class="navbar-item right" href="./">Home</a>
+        <a class="navbar-item right" href="./about">About</a>
+        <a class="navbar-item right" href="./photos">Photos</a>
+        <a class="navbar-item right" href="./resume.pdf">Resume</a>
     </div>
 </div>
 </nav>
